--- a/.travis.yml
+++ b/.travis.yml
@@ -4,20 +4,13 @@ branches:
   except:
     - moodle_includes
 
-sudo: true
+addons:
+  postgresql: "9.4"
 
 services:
   - mysql
   - postgresql
-
-addons:
-  firefox: "47.0.1"
-  chrome: stable
-  postgresql: "9.4"
-  apt:
-    packages:
-      - openjdk-8-jre-headless
-      - chromium-chromedriver
+  - docker
 
 cache:
   directories:
@@ -37,12 +30,12 @@ env:
 
 before_install:
   - phpenv config-rm xdebug.ini
-  - nvm install 8.9
-  - nvm use 8.9
+  - nvm install 14.0
+  - nvm use 14.0
   - cd ../..
   - composer create-project -n --no-dev --prefer-dist blackboard-open-source/moodle-plugin-ci ci ^2
   - export PATH="$(cd ci/bin; pwd):$(cd ci/vendor/bin; pwd):$PATH"
-  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://127.0.0.1 &
+  - docker run -d -p 127.0.0.1:4444:4444 --net=host -v /dev/shm:/dev/shm selenium/standalone-firefox:2.53.1
 
 install:
   - moodle-plugin-ci install
@@ -58,4 +51,4 @@ script:
   - moodle-plugin-ci grunt
   - moodle-plugin-ci phpdoc
   - moodle-plugin-ci phpunit
-  - moodle-plugin-ci behat --profile chrome
+  - moodle-plugin-ci behat
