--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ branches:
     - moodle_includes
 
 addons:
-  postgresql: "9.4"
+  postgresql: "9.4" # Moodle 3.9 requires PostgreSQL 9.5
 
 services:
   - mysql
@@ -17,21 +17,43 @@ cache:
     - $HOME/.composer/cache
     - $HOME/.npm
 
-php:
- - 7.0
- - 7.2
-
-env:
- global:
-  - MOODLE_BRANCH=MOODLE_35_STABLE
- matrix:
-  - DB=pgsql
-  - DB=mysqli
+matrix:
+ include:
+  # Moodle 3.3 (old) version.php $plugin -> requires = 2017051509
+  #- php: 7.0 # 5.6.5-7.1
+  #  env: MOODLE_BRANCH=MOODLE_33_STABLE NODE_VERSION=8.9 DB=mysqli
+  # Moodle 3.3 (old), PostgreSQL
+  #- php: 7.0 # 5.6.5-7.1
+  #  env: MOODLE_BRANCH=MOODLE_33_STABLE NODE_VERSION=8.9 DB=pgsql
+  # Moodle 3.4 (old)
+  #- php: 7.0 # 7.0-7.2
+  #  env: MOODLE_BRANCH=MOODLE_34_STABLE NODE_VERSION=8.10 DB=mysqli
+  # Moodle 3.5
+  - php: 7.0 # 7.0-7.2
+    env: MOODLE_BRANCH=MOODLE_35_STABLE NODE_VERSION=14.0 DB=mysqli
+  # Moodle 3.5, PostgreSQL
+  - php: 7.0 # 7.0-7.2
+    env: MOODLE_BRANCH=MOODLE_35_STABLE NODE_VERSION=14.0 DB=pgsql
+  # Moodle 3.6
+  - php: 7.1 # 7.0-7.3
+    env: MOODLE_BRANCH=MOODLE_36_STABLE NODE_VERSION=8.17 DB=mysqli
+  # Moodle 3.7
+  - php: 7.2 # 7.1-7.3
+    env: MOODLE_BRANCH=MOODLE_37_STABLE NODE_VERSION=14.1 DB=mysqli
+  # Moodle 3.8
+  - php: 7.3 # 7.1-7.4
+    env: MOODLE_BRANCH=MOODLE_38_STABLE NODE_VERSION=14.2 DB=mysqli
+  # Moodle 3.8, PostgreSQL
+  - php: 7.4 # 7.1-7.4
+    env: MOODLE_BRANCH=MOODLE_38_STABLE NODE_VERSION=14.4 DB=pgsql
+  # Moodle Master (Behat failing to turn editing on)
+  #- php: 7.4 # 7.2-7.4
+  #  env: MOODLE_BRANCH=master NODE_VERSION=14.4 DB=mysqli
 
 before_install:
   - phpenv config-rm xdebug.ini
-  - nvm install 14.0
-  - nvm use 14.0
+  - nvm install $NODE_VERSION
+  - nvm use $NODE_VERSION
   - cd ../..
   - composer create-project -n --no-dev --prefer-dist blackboard-open-source/moodle-plugin-ci ci ^2
   - export PATH="$(cd ci/bin; pwd):$(cd ci/vendor/bin; pwd):$PATH"
