--- a/.travis.yml
+++ b/.travis.yml
@@ -44,13 +44,13 @@ matrix:
   - php: 7.2 # 7.1-7.4
     env: MOODLE_BRANCH=MOODLE_38_STABLE NODE_VERSION=14.2 DB=mysqli
   # Moodle 3.9
-  - php: 7.3 # 7.1-7.4
+  - php: 7.3 # 7.2-7.4
     env: MOODLE_BRANCH=MOODLE_39_STABLE NODE_VERSION=14.3 DB=mysqli
-  # Moodle Master (Behat failing to turn editing on)
+  # Moodle Master
   - php: 7.4 # 7.2-7.4
     env: MOODLE_BRANCH=master NODE_VERSION=14.4 DB=mysqli
   # Moodle Master, PostgreSQL
-  - php: 7.4 # 7.1-7.4
+  - php: 7.4 # 7.2-7.4
     env: MOODLE_BRANCH=master NODE_VERSION=14.4 DB=pgsql
 
 before_install:
