--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
-# Based on https://github.com/open-lms-open-source/moodle-plugin-ci/blob/master/.travis.dist.yml
+# Based on https://github.com/moodlehq/moodle-plugin-ci/blob/master/.travis.dist.yml
 # Plus matrix from https://github.com/catalyst/moodle-auth_saml2/blob/master/.travis.yml
+
 language: php
 
 addons:
-  postgresql: "9.6" # Moodle Master requires PostgreSQL 9.6
+  postgresql: "9.6" # Moodle 3.10 requires PostgreSQL 9.6
 
 services:
   - mysql
@@ -28,40 +29,42 @@ matrix:
   #  env: MOODLE_BRANCH=MOODLE_34_STABLE NODE_VERSION=8.10 DB=mysqli
   # Moodle 3.5
   - php: 7.0 # 7.0-7.2
-    env: MOODLE_BRANCH=MOODLE_35_STABLE NODE_VERSION=14.0 DB=mysqli
+    env: MOODLE_BRANCH=MOODLE_35_STABLE NODE_VERSION=14.15 DB=mysqli
   # Moodle 3.5, PostgreSQL
   - php: 7.0 # 7.0-7.2
-    env: MOODLE_BRANCH=MOODLE_35_STABLE NODE_VERSION=14.0 DB=pgsql
+    env: MOODLE_BRANCH=MOODLE_35_STABLE NODE_VERSION=14.15 DB=pgsql
   # Moodle 3.6
   - php: 7.0 # 7.0-7.3
     env: MOODLE_BRANCH=MOODLE_36_STABLE NODE_VERSION=8.17 DB=mysqli
   # Moodle 3.7
   - php: 7.1 # 7.1-7.3
-    env: MOODLE_BRANCH=MOODLE_37_STABLE NODE_VERSION=14.1 DB=mysqli
+    env: MOODLE_BRANCH=MOODLE_37_STABLE NODE_VERSION=14.15 DB=mysqli
   # Moodle 3.8
-  - php: 7.2 # 7.1-7.4
-    env: MOODLE_BRANCH=MOODLE_38_STABLE NODE_VERSION=14.2 DB=mysqli
+  - php: 7.1 # 7.1-7.4
+    env: MOODLE_BRANCH=MOODLE_38_STABLE NODE_VERSION=14.15 DB=mysqli
   # Moodle 3.9
-  - php: 7.3 # 7.2-7.4
-    env: MOODLE_BRANCH=MOODLE_39_STABLE NODE_VERSION=14.3 DB=mysqli
+  - php: 7.2 # 7.2-7.4
+    env: MOODLE_BRANCH=MOODLE_39_STABLE NODE_VERSION=14.15 DB=mysqli
   # Moodle 3.10
-  - php: 7.4 # 7.2-7.4
-    env: MOODLE_BRANCH=MOODLE_310_STABLE NODE_VERSION=14.4 DB=mysqli
+  - php: 7.2 # 7.2-7.4
+    env: MOODLE_BRANCH=MOODLE_310_STABLE NODE_VERSION=14.15 DB=mysqli
+  # Moodle 3.11
+  - php: 7.3 # 7.2-7.4
+    env: MOODLE_BRANCH=MOODLE_311_STABLE NODE_VERSION=14.15 DB=mysqli
   # Moodle Master
   - php: 7.4 # 7.2-7.4
-    env: MOODLE_BRANCH=master NODE_VERSION=14.4 DB=mysqli
+    env: MOODLE_BRANCH=master NODE_VERSION=14.15 DB=mysqli
   # Moodle Master, PostgreSQL
   - php: 7.4 # 7.2-7.4
-    env: MOODLE_BRANCH=master NODE_VERSION=14.4 DB=pgsql
+    env: MOODLE_BRANCH=master NODE_VERSION=14.15 DB=pgsql
 
 before_install:
   - phpenv config-rm xdebug.ini
+  - cd ../..
   - nvm install $NODE_VERSION
   - nvm use $NODE_VERSION
-  - cd ../..
-  - composer create-project -n --no-dev --prefer-dist blackboard-open-source/moodle-plugin-ci ci ^2
+  - composer create-project -n --no-dev --prefer-dist moodlehq/moodle-plugin-ci ci ^3
   - export PATH="$(cd ci/bin; pwd):$(cd ci/vendor/bin; pwd):$PATH"
-  - docker run -d -p 127.0.0.1:4444:4444 --net=host -v /dev/shm:/dev/shm selenium/standalone-firefox:2.53.1
 
 install:
   - moodle-plugin-ci install
@@ -77,4 +80,4 @@ script:
   - moodle-plugin-ci grunt
   - moodle-plugin-ci phpdoc
   - moodle-plugin-ci phpunit
-  - moodle-plugin-ci behat
+  #- moodle-plugin-ci behat
