--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,6 @@
 {
     "plugins": [
-      // "babel",
+      "babel",
       "promise"
     ],
     "env": {
@@ -211,7 +211,7 @@
         },
         // We're using babel transpiling so use their parser
         // for linting.
-        "parser": "babel-eslint",
+        "parser": "@babel/eslint-parser",
         // Check AMD with some slightly stricter rules.
         "rules": {
           "no-unused-vars": "error",
