Initial update for Moodle 4.0

--- a/.github/workflows/moodle-ci.yml
+++ b/.github/workflows/moodle-ci.yml
@@ -11,7 +11,7 @@ jobs:
 
     services:
       postgres:
-        image: postgres:10 # Moodle 3.4-3.5: 9.3-11.x / Moodle 3.6-3.8: 9.4-11.x / Moodle 3.9: >=9.5 / Moodle 3.10-3.11: >=9.6
+        image: postgres:10 # Moodle 4.0: >=10
         env:
           POSTGRES_USER: 'postgres'
           POSTGRES_HOST_AUTH_METHOD: 'trust'
@@ -19,7 +19,7 @@ jobs:
           - 5432:5432
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 3
       mariadb:
-        image: mariadb:10.5 # Moodle 3.4-3.8: >=5.5.31 / Moodle 3.9-3.11 >=10.2.29 / 10.6 breaks Moodle, see MDL-72131
+        image: mariadb:10 # Moodle 4.0 >=10.2.29
         env:
           MYSQL_USER: 'root'
           MYSQL_ALLOW_EMPTY_PASSWORD: "true"
@@ -34,50 +34,19 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          # Moodle 3.4 (old) version.php $plugin -> requires = 2017111300
-          #- php: '7.0' # 7.0-7.2
-          #  moodle-branch: 'MOODLE_34_STABLE'
-          #  database: mariadb
-          # Moodle 3.5
-          - php: '7.0' # 7.0-7.2
-            moodle-branch: 'MOODLE_35_STABLE'
+          # Moodle 4.0
+          - php: '7.3' # 7.3-7.4
+            moodle-branch: 'MOODLE_400_STABLE'
             database: mariadb
-          # Moodle 3.6
-          - php: '7.0' # 7.0-7.3
-            moodle-branch: 'MOODLE_36_STABLE'
-            database: mariadb
-          # Moodle 3.7
-          - php: '7.1' # 7.1-7.3
-            moodle-branch: 'MOODLE_37_STABLE'
-            database: mariadb
-          # Moodle 3.8
-          - php: '7.1' # 7.1-7.4
-            moodle-branch: 'MOODLE_38_STABLE'
-            database: mariadb
-          # Moodle 3.9
-          - php: '7.2' # 7.2-7.4
-            moodle-branch: 'MOODLE_39_STABLE'
-            database: mariadb
-          # Moodle 3.9, PostgreSQL
-          - php: '7.2' # 7.2-7.4
-            moodle-branch: 'MOODLE_39_STABLE'
-            database: pgsql
-          # Moodle 3.10
-          - php: '7.3' # 7.2-7.4
-            moodle-branch: 'MOODLE_310_STABLE'
-            database: mariadb
-          # Moodle 3.11
+          # Moodle 4.0, PostgreSQL
           - php: '7.4' # 7.3-7.4
-            moodle-branch: 'MOODLE_311_STABLE'
-            database: mariadb
-          # Moodle 3.11, PostgreSQL
-          - php: '7.4' # 7.3-7.4
-            moodle-branch: 'MOODLE_311_STABLE'
+            moodle-branch: 'MOODLE_400_STABLE'
             database: pgsql
-          # Moodle 3.11, PHP 8.0 (not ready for production, see MDL-70745)
+          # Moodle master, PHP 8.0 (not ready for production, see MDL-70745)
           - php: '8.0' # 7.3-7.4
-            moodle-branch: 'MOODLE_311_STABLE'
+            moodle-branch: 'master'
             database: mariadb
+            # extensions: xmlrpc-beta
 
     steps:
       - name: Check out repository code
@@ -151,5 +120,5 @@ jobs:
         run: moodle-plugin-ci phpunit
 
       - name: Behat features
-        if: ${{ (matrix.moodle-branch != 'MOODLE_34_STABLE' && matrix.moodle-branch != 'MOODLE_36_STABLE' && matrix.moodle-branch != 'MOODLE_37_STABLE') && always() }}
+        if: ${{ always() }}
         run: moodle-plugin-ci behat --profile chrome
