Update checks for PHP 8.0

--- a/.github/workflows/moodle-ci.yml
+++ b/.github/workflows/moodle-ci.yml
@@ -67,15 +67,15 @@ jobs:
             moodle-branch: 'MOODLE_310_STABLE'
             database: mariadb
           # Moodle 3.11
-          - php: '7.4' # 7.3-7.4
+          - php: '7.4' # 7.3-8.0
             moodle-branch: 'MOODLE_311_STABLE'
             database: mariadb
           # Moodle 3.11, PostgreSQL
-          - php: '7.4' # 7.3-7.4
+          - php: '7.4' # 7.3-8.0
             moodle-branch: 'MOODLE_311_STABLE'
             database: pgsql
-          # Moodle 3.11, PHP 8.0 (not ready for production, see MDL-70745)
-          - php: '8.0' # 7.3-7.4
+          # Moodle 3.11, PHP 8.0
+          - php: '8.0' # 7.3-8.0
             moodle-branch: 'MOODLE_311_STABLE'
             database: mariadb
 
