--- a/.github/workflows/moodle-ci.yml
+++ b/.github/workflows/moodle-ci.yml
@@ -35,15 +35,15 @@ jobs:
       matrix:
         include:
           # Moodle 4.0
-          - php: '7.3' # 7.3-7.4
+          - php: '7.3' # 7.3-8.0
             moodle-branch: 'MOODLE_400_STABLE'
             database: mariadb
           # Moodle 4.0, PostgreSQL
-          - php: '7.4' # 7.3-7.4
+          - php: '7.4' # 7.3-8.0
             moodle-branch: 'MOODLE_400_STABLE'
             database: pgsql
-          # Moodle master, PHP 8.0 (not ready for production, see MDL-70745)
-          - php: '8.0' # 7.3-7.4
+          # Moodle master, PHP 8.0
+          - php: '8.0' # 7.3-8.0
             moodle-branch: 'master'
             database: mariadb
             # extensions: xmlrpc-beta
