--- a/.github/workflows/moodle-ci.yml
+++ b/.github/workflows/moodle-ci.yml
@@ -11,7 +11,7 @@ jobs:
 
     services:
       postgres:
-        image: postgres:10 # Moodle 3.4-3.5: 9.3-11.x / Moodle 3.6-3.8: 9.4-11.x / Moodle 3.9: >=9.5 / Moodle 3.10-3.11: >=9.6
+        image: postgres:9.6 # Moodle 3.4-3.5: 9.3-11.x / Moodle 3.6-3.8: 9.4-11.x / Moodle 3.9: >=9.5 / Moodle 3.10-3.11: >=9.6
         env:
           POSTGRES_USER: 'postgres'
           POSTGRES_HOST_AUTH_METHOD: 'trust'
@@ -19,7 +19,7 @@ jobs:
           - 5432:5432
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 3
       mariadb:
-        image: mariadb:10.5 # Moodle 3.4-3.8: >=5.5.31 / Moodle 3.9-3.11 >=10.2.29 / 10.6 breaks Moodle, see MDL-72131
+        image: mariadb:10.2 # Moodle 3.4-3.8: >=5.5.31 / Moodle 3.9-3.11 >=10.2.29 / 10.6 breaks Moodle, see MDL-72131
         env:
           MYSQL_USER: 'root'
           MYSQL_ALLOW_EMPTY_PASSWORD: "true"
@@ -38,50 +38,46 @@ jobs:
           #- php: '7.0' # 7.0-7.2
           #  moodle-branch: 'MOODLE_34_STABLE'
           #  database: mariadb
+          #  plugin-ci: ^3
           # Moodle 3.5
           - php: '7.0' # 7.0-7.2
             moodle-branch: 'MOODLE_35_STABLE'
-            database: mariadb
+            database: pgsql
+            plugin-ci: ^3
           # Moodle 3.6
           - php: '7.0' # 7.0-7.3
             moodle-branch: 'MOODLE_36_STABLE'
             database: mariadb
+            plugin-ci: ^3
           # Moodle 3.7
           - php: '7.1' # 7.1-7.3
             moodle-branch: 'MOODLE_37_STABLE'
-            database: mariadb
+            database: pgsql
+            plugin-ci: ^3
           # Moodle 3.8
-          - php: '7.1' # 7.1-7.4
+          - php: '7.2' # 7.1-7.4
             moodle-branch: 'MOODLE_38_STABLE'
             database: mariadb
+            plugin-ci: ^3
           # Moodle 3.9
-          - php: '7.2' # 7.2-7.4
-            moodle-branch: 'MOODLE_39_STABLE'
-            database: mariadb
-          # Moodle 3.9, PostgreSQL
-          - php: '7.2' # 7.2-7.4
+          - php: '7.3' # 7.2-7.4
             moodle-branch: 'MOODLE_39_STABLE'
             database: pgsql
+            plugin-ci: ^3
           # Moodle 3.10
-          - php: '7.3' # 7.2-7.4
+          - php: '7.4' # 7.2-7.4
             moodle-branch: 'MOODLE_310_STABLE'
             database: mariadb
+            plugin-ci: ^4
           # Moodle 3.11
-          - php: '7.4' # 7.3-8.0
-            moodle-branch: 'MOODLE_311_STABLE'
-            database: mariadb
-          # Moodle 3.11, PostgreSQL
-          - php: '7.4' # 7.3-8.0
-            moodle-branch: 'MOODLE_311_STABLE'
-            database: pgsql
-          # Moodle 3.11, PHP 8.0
           - php: '8.0' # 7.3-8.0
             moodle-branch: 'MOODLE_311_STABLE'
-            database: mariadb
+            database: pgsql
+            plugin-ci: ^4
 
     steps:
       - name: Check out repository code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           path: plugin
 
@@ -91,11 +87,13 @@ jobs:
           php-version: ${{ matrix.php }}
           extensions: ${{ matrix.extensions }} # PHP 8 changes
           ini-values: max_input_vars=5000
+          # If you are not using code coverage, keep "none". Otherwise, use "pcov" (Moodle 3.10 and up) or "xdebug".
+          # If you try to use code coverage with "none", it will fallback to phpdbg (which has known problems).
           coverage: none
 
       - name: Initialise moodle-plugin-ci
         run: |
-          composer create-project -n --no-dev --prefer-dist moodlehq/moodle-plugin-ci ci ^3
+          composer create-project -n --no-dev --prefer-dist moodlehq/moodle-plugin-ci ci ${{ matrix.plugin-ci }}
           echo $(cd ci/bin; pwd) >> $GITHUB_PATH
           echo $(cd ci/vendor/bin; pwd) >> $GITHUB_PATH
           sudo locale-gen en_AU.UTF-8
@@ -124,7 +122,7 @@ jobs:
 
       - name: Moodle Code Checker
         if: ${{ always() }}
-        run: moodle-plugin-ci codechecker --max-warnings 0
+        run: moodle-plugin-ci phpcs --max-warnings 0
 
       - name: Moodle PHPDoc Checker
         if: ${{ always() }}
