--- a/.github/workflows/moodle-ci.yml
+++ b/.github/workflows/moodle-ci.yml
@@ -18,6 +18,7 @@ jobs:
         ports:
           - 5432:5432
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 3
+
       mariadb:
         image: mariadb:10.6 # Moodle 4.2 >=10.6.7
         env:
@@ -45,21 +46,27 @@ jobs:
             database: mariadb
             plugin-ci: ^3
           # Moodle 4.2, PHP 8.0, PostgreSQL
-          - php: '8.0' # 8.0-8.1
+          - php: '8.0' # 8.0-8.2
             moodle-branch: 'MOODLE_402_STABLE'
             database: pgsql
             plugin-ci: ^4
             # extensions: xmlrpc-beta
           # Moodle 4.3, PHP 8.1, MariaDB
-          - php: '8.1'
+          - php: '8.1' # 8.0-8.2
             moodle-branch: 'MOODLE_403_STABLE'
             database: mariadb
             plugin-ci: ^4
             # extensions: xmlrpc-beta
-          # Moodle main, PHP 8.2, PostgreSQL
-          - php: '8.2'
-            moodle-branch: 'main'
+          # Moodle 4.4, PHP 8.2, PostgreSQL
+          - php: '8.2' # 8.1-8.3
+            moodle-branch: 'MOODLE_404_STABLE'
             database: pgsql
+            plugin-ci: ^4
+            # extensions: xmlrpc-beta
+          # Moodle main, PHP 8.3, MariaDB
+          - php: '8.3'
+            moodle-branch: 'main'
+            database: mariadb
             plugin-ci: ^4
             # extensions: xmlrpc-beta
 
@@ -88,54 +95,69 @@ jobs:
           echo "NVM_DIR=$HOME/.nvm" >> $GITHUB_ENV
 
       - name: Install moodle-plugin-ci
-        run: |
-          moodle-plugin-ci install --plugin ./plugin --db-host=127.0.0.1
+        run: moodle-plugin-ci install --plugin ./plugin --db-host=127.0.0.1
         env:
           DB: ${{ matrix.database }}
           MOODLE_BRANCH: ${{ matrix.moodle-branch }}
+          # Uncomment this to run Behat tests using the Moodle App.
+          # MOODLE_APP: 'true'
 
       - name: PHP Lint
-        if: ${{ always() }}
+        if: ${{ !cancelled() }}
         run: moodle-plugin-ci phplint
 
       - name: PHP Copy/Paste Detector
         continue-on-error: true # This step will show errors but will not fail
-        if: ${{ always() }}
+        if: ${{ !cancelled() }}
         run: moodle-plugin-ci phpcpd
 
       - name: PHP Mess Detector
         continue-on-error: true # This step will show errors but will not fail
-        if: ${{ always() }}
+        if: ${{ !cancelled() }}
         run: moodle-plugin-ci phpmd
 
       - name: Moodle Code Checker
-        if: ${{ always() }}
+        if: ${{ !cancelled() }}
         run: moodle-plugin-ci phpcs --max-warnings 0
 
       - name: Moodle PHPDoc Checker
-        if: ${{ always() }}
+        if: ${{ !cancelled() }}
         run: moodle-plugin-ci phpdoc
 
       - name: Validating
-        if: ${{ always() }}
+        if: ${{ !cancelled() }}
         run: moodle-plugin-ci validate
 
       - name: Check upgrade savepoints
-        if: ${{ always() }}
+        if: ${{ !cancelled() }}
         run: moodle-plugin-ci savepoints
 
       - name: Mustache Lint
-        if: ${{ always() }}
+        if: ${{ !cancelled() }}
         run: moodle-plugin-ci mustache
 
       - name: Grunt
-        if: ${{ always() }}
+        if: ${{ !cancelled() }}
         run: moodle-plugin-ci grunt --max-lint-warnings 0
 
       - name: PHPUnit tests
-        if: ${{ always() }}
+        if: ${{ !cancelled() }}
         run: moodle-plugin-ci phpunit --fail-on-warning
 
       - name: Behat features
-        if: ${{ always() }}
+        id: behat
+        if: ${{ !cancelled() }}
         run: moodle-plugin-ci behat --profile chrome
+
+      - name: Upload Behat Faildump
+        if: ${{ failure() && steps.behat.outcome == 'failure' }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: Behat Faildump (${{ join(matrix.*, ', ') }})
+          path: ${{ github.workspace }}/moodledata/behat_dump
+          retention-days: 7
+          if-no-files-found: ignore
+
+      - name: Mark cancelled jobs as failed.
+        if: ${{ cancelled() }}
+        run: exit 1
