--- a/.github/workflows/moodle-ci.yml
+++ b/.github/workflows/moodle-ci.yml
@@ -11,7 +11,7 @@ jobs:
 
     services:
       postgres:
-        image: postgres:13 # Moodle 4.2: >=13
+        image: postgres:14 # Moodle 5.0
         env:
           POSTGRES_USER: 'postgres'
           POSTGRES_HOST_AUTH_METHOD: 'trust'
@@ -20,7 +20,7 @@ jobs:
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 3
 
       mariadb:
-        image: mariadb:10.6 # Moodle 4.2 >=10.6.7
+        image: mariadb:10.11 # Moodle 5.0
         env:
           MYSQL_USER: 'root'
           MYSQL_ALLOW_EMPTY_PASSWORD: "true"
@@ -64,13 +64,13 @@ jobs:
             plugin-ci: ^4
             # extensions: xmlrpc-beta
           # Moodle 4.5, PHP 8.3, MariaDB
-          - php: '8.3'
+          - php: '8.3' # 8.1-8.3
             moodle-branch: 'MOODLE_405_STABLE'
             database: mariadb
             plugin-ci: ^4
             # extensions: xmlrpc-beta
-          # Moodle main, PHP 8.3, PostgreSQL
-          - php: '8.3'
+          # Moodle 5.0, PHP 8.3, PostgreSQL
+          - php: '8.3' # 8.2-8.3
             moodle-branch: 'main'
             database: pgsql
             plugin-ci: ^4
