Update CI (MDL-80117)

--- a/.github/workflows/moodle-ci.yml
+++ b/.github/workflows/moodle-ci.yml
@@ -36,15 +36,21 @@ jobs:
       matrix:
         include:
           # Moodle 5.0, PHP 8.2, PostgreSQL
-          - php: '8.2' # 8.2-8.3
-            moodle-branch: 'main'
+          - php: '8.2' # 8.2-8.4
+            moodle-branch: 'MOODLE_500_STABLE'
             database: pgsql
             plugin-ci: ^4
             # extensions: xmlrpc-beta
-          # Moodle 5.0, PHP 8.3, MariaDB
-          - php: '8.3' # 8.2-8.3
+          # Moodle 5.1, PHP 8.3, MariaDB
+          - php: '8.3'
             moodle-branch: 'main'
             database: mariadb
+            plugin-ci: ^4
+            # extensions: xmlrpc-beta
+          # Moodle 5.1, PHP 8.4, PostgresSQL
+          - php: '8.4'
+            moodle-branch: 'main'
+            database: pgsql
             plugin-ci: ^4
             # extensions: xmlrpc-beta
 
