--- a/.github/workflows/moodle-ci.yml
+++ b/.github/workflows/moodle-ci.yml
@@ -11,7 +11,7 @@ jobs:
 
     services:
       postgres:
-        image: postgres:14 # Moodle 5.0
+        image: postgres:15 # Moodle 5.1
         env:
           POSTGRES_USER: 'postgres'
           POSTGRES_HOST_AUTH_METHOD: 'trust'
@@ -42,13 +42,13 @@ jobs:
             plugin-ci: ^4
             # extensions: xmlrpc-beta
           # Moodle 5.1, PHP 8.3, MariaDB
-          - php: '8.3'
+          - php: '8.3' # 8.2-8.4
             moodle-branch: 'main'
             database: mariadb
             plugin-ci: ^4
             # extensions: xmlrpc-beta
           # Moodle 5.1, PHP 8.4, PostgresSQL
-          - php: '8.4'
+          - php: '8.4' # 8.2-8.4
             moodle-branch: 'main'
             database: pgsql
             plugin-ci: ^4
