--- a/.github/workflows/moodle-ci.yml
+++ b/.github/workflows/moodle-ci.yml
@@ -11,7 +11,7 @@ jobs:
 
     services:
       postgres:
-        image: postgres:15 # Moodle 5.1
+        image: postgres:16 # Moodle 5.2
         env:
           POSTGRES_USER: 'postgres'
           POSTGRES_HOST_AUTH_METHOD: 'trust'
@@ -54,7 +54,7 @@ jobs:
             plugin-ci: ^4
             # extensions: xmlrpc-beta
           # Moodle 5.2, PHP 8.4, PostgresSQL
-          - php: '8.4'
+          - php: '8.4' # 8.3-8.4
             moodle-branch: 'main'
             database: pgsql
             plugin-ci: ^4
